<resources>
    <string name="app_name">HttpClient</string>
    <string name="url">https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20in%20(select%20woeid%20from%20geo.places(1)%20where%20text%3D%22popayan%2C%20co%22)&amp;format=json&amp;env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys</string>
    <string name="popayan">Popayan</string>
    <string name="descripcion">Descripcion</string>
    <string name="empty">...</string>
    <string name="temp">Temperatura</string>
    <string name="hum">Humedad</string>
    <string name="pres">Presion</string>
    <!--<string name="url_ip">http://192.168.1.12/usuarios</string>
    <string name="url_emulador">http://10.0.2.2/usuarios</string>-->
</resources>
